--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -155,7 +155,7 @@ textarea {
     line-height: 40px;
     padding-left: 20px;
     border: 0;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-size: 15px;
     .list {
         width: 100%;
